welcome.lessons.welcome.variables.Variables.scala.error
Variables:6: error: type mismatch;
 found   : Unit
 required: Boolean
if (avance()) {
          ^